deprecated jee dependencies basic - done